fixed paragraph spacing

--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,6 @@ body {
 	padding: 0;
 }
 
-.instructions {
-	border: solid lightgray;
-	padding: 5px;
-}
-
 .container {
 	margin: 0 auto;
 	width: 1170px;
@@ -66,6 +61,17 @@ body {
 	font-family: sans-serif;
 }
 
+p{
+padding: 5px;
+	margin: 5px 0 5px 5px;
+}
+
+.instructions {
+	border: 5px solid lightgray;
+	margin: 20px 20px 20px 0;
+	padding: 10px;
+}
+
 .pull-left {
 	border: 5px solid lightgray;
 	float: left;
@@ -75,7 +81,7 @@ body {
 .pull-right {
 	border: 5px solid white;
 	float: right;
-	margin: 10px;
+	margin: 5px 5px 10px 10px;
 }
 
 footer {
@@ -83,6 +89,7 @@ footer {
 	background-color: black;
 	color: lightgray;
 	margin: 0;
-	padding: 0;
+	padding: 25px;
+	font-style: italic;
 }
 
